--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,32 +23,32 @@
     "@angular/platform-browser-dynamic": "7.2.11",
     "@angular/platform-server": "7.2.11",
     "@angular/router": "7.2.11",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.0.0",
     "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
     "@angular/cli": "7.3.7",
     "@angular/compiler-cli": "7.2.11",
     "@angular/language-service": "7.2.11",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.12.1",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~6.0.0",
+    "ts-node": "~8.0.3",
+    "tslint": "~5.14.0",
+    "typescript": "3.4.1"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.0"
